manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "myakscluster-6725"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "myakscluster-6725"
  template:
    metadata:
      labels:
        app: "myakscluster-6725"
    spec:
      containers:
        - name: "myakscluster-6725"
          image: "myaksregsitry.azurecr.io/myakscluster"
          ports:
          - containerPort: 8080
            name: service
            protocol: TCP
          - containerPort: 8081
            name: management
            protocol: TCP
